infrastructure/controllers/home-automation/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  selector:
    app: homeassistant
  ports:
    - port: 8123
      targetPort: 8123
