infrastructure/controllers/home-automation/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-automation
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
