infrastructure/controllers/home-automation/zigbee2mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
