infrastructure/controllers/home-automation/homeassistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homeassistant.noynto.me
      secretName: homeassistant-tls
  rules:
    - host: homeassistant.noynto.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
